Commit from local computer

--- a/www/bootstrap.css
+++ b/www/bootstrap.css
@@ -1290,7 +1290,7 @@ h5,
   font-size: 16px;
   font-family: "Helvetica";
   color : #666666;
-  text-align: justify;
+  line-height: 26px;
 }
 h6,
 .h6 {
