--- a/www/bootstrap.css
+++ b/www/bootstrap.css
@@ -1259,43 +1259,51 @@ h6 .small,
 h1,
 .h1 {
   font-size: 36px;
-  text-align: center;
   padding: 10px 0;
   margin-left: 100;
-  font-family: Helvetica";
+  font-family: The Neue;
+  font-style: normal;
   color : #333;
+  text-transform: uppercase;
 }
 h2,
 .h2 {
   font-size: 30px;
-  font-family: "Helvetica";
+  font-family: The Neue;
+  font-style: normal;
   color : #333;
+  text-transform: uppercase;
 }
 h3,
 .h3 {
-  font-size: 24px;
-  font-family: "Helvetica";
+  font-size: 20px;
+  font-family: The Neue;
   color : #333;
+  text-transform: uppercase;
 }
 h4,
 .h4 {
   font-size: 16px;
-  font-family: "Helvetica";
-  color : #666666;
+  font-family: Barlow;
+  color : #333;
   line-height: 26px;
   text-align: justify;
+  font-style: normal;
+  font-weight: normal;
 }
 h5,
 .h5 {
   font-size: 16px;
-  font-family: "Helvetica";
-  color : #666666;
+  font-family: Barlow;
+  color : #333;
   line-height: 26px;
 }
 h6,
 .h6 {
   font-size: 12px;
-  font-family: "Helvetica";
+  font-family: Barlow;
+  color : #333;
+  line-height: 26px;
   text-align: justify;
 }
 p {
@@ -2360,18 +2368,21 @@ pre code {
 }
 table {
   background-color: #333;
-  font-family: "Helvetica";
+  font-family: Barlow;
   border: 1px solid black;
 
 }
 
 th {
   color: white;
-  height: 40px,
+  height: 40px;
+  text-transform: uppercase;
+  text-align: left;
 }
 
 td {
   color: #333;
+  text-align: left;
 }
 
 fieldset {
@@ -3836,8 +3847,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-left: -1px;
 }
 .navbar-default {
-  background-color: #333;
+  background-color: #ffffff;
   border-color: transparent;
+  float: right;
+  width: 40%;
 }
 .navbar-default .navbar-brand {
   color: #E3B761;
@@ -3845,16 +3858,17 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-brand > li > a:hover {
   color: white;
 }
-
-.navbar-default .navbar-nav > li {
-  border-left: 1px solid #ffffff;
-}
 .navbar-default .navbar-nav > li > a {
-    display: block;
-  color: white;
+  display: block;
+  color: #333;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: Barlow;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
 }
 .navbar-default .navbar-nav > li > a:hover {
   background-color: #111;
@@ -3864,6 +3878,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-nav > .active > a {
   background-color:#ffffff !important;
   color: #333 !important;
+  text-decoration: underline !important;
+  text-decoration-color: red !important;
+  font-weight: 800 !important;
 }
 .breadcrumb {
   padding: 8px 15px;
@@ -4995,10 +5012,9 @@ button.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: white;
-  border-style: double;
+  background: #F1EDEE;
   border-color: #333;
-  border-width: 3px;
+  border-width: 1px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
