--- a/www/bootstrap.css
+++ b/www/bootstrap.css
@@ -21,7 +21,10 @@ details,
 figcaption,
 figure,
 footer,
-header,
+header {
+  padding-top: 40px;
+  padding-left: 10px;
+}
 hgroup,
 main,
 menu,
@@ -3859,14 +3862,20 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #ffffff;
   border-color: transparent;
   float: right;
-  width: 75%;
+  width: 92%;
+  padding-top: 40px;
+  position: sticky;
+  top: 0;
 }
-.navbar-default .navbar-brand {
-  color: #E3B761;
+
+nav ul {
+  display: flex;
 }
+
 .navbar-default .navbar-brand > li > a:hover {
   color: white;
 }
+
 .navbar-default .navbar-nav > li > a {
   display: block;
   color: #333;
